fix left panel coz jessica got too much skins

--- a/css/akchardetail.css
+++ b/css/akchardetail.css
@@ -351,7 +351,7 @@ body {
 
 .chara-detail-container .elite-sidenav {
     max-width: 80px;
-    margin-top: 250px;
+    margin-top: 170px;
     margin-left: 20px;
     display: inline-block;
     height: 100%;
